# async-fast-api-base

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.debugger.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  test-db.dbcnb
.envs/: backend.env  dragonfly.env  postgres.env
.envs/.local/: .backend  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
compose/backend/: Dockerfile  start
compose/dragonfly/: Dockerfile
compose/local/backend/: Dockerfile  entrypoint  start
compose/local/postgres/: Dockerfile
compose/postgres/: Dockerfile
requirements/: base.txt  local.txt
src/: main.py
src/apps/news/data/: news.py
src/apps/news/domain/: news_service.py
src/apps/news/presentation/: main.py  news_controller.py
src/apps/users/application/: service.py
src/apps/users/data/: repository.py
src/apps/users/domain/: dto.py  entity.py
src/apps/users/presentation/: main.py  users.py
src/core/: base_dto.py  base_entity.py  base_repository.py  base_service.py  config.py  deps.py  engine.py  settings.py  types.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 7cf6f7b72b8b_initial_news_app_tables.py  b890d67ea11f_added_user_table.py
src/utils/: base_schema.py  exception_handlers.py  exceptions.py  logging_config.py  middleware.py  pagination.py  security.py
