# ==== project ====
[project]
name = "base-async-fastapi"
version = "1.0.0"
requires-python = "==3.13.5"
authors = [{ name = "Erfan Ehsany", email = "erfan.ehsany@outlook.com" }]
maintainers = [{ name = "Erfan Ehsany", email = "erfan.ehsany@outlook.com" }]
description = "My Base Async fastapi project also a simple crawler of websites"
readme = "README.md"
license = "MIT"
dependencies = [
  "fastapi[standard]==0.116.1",
  "sqlmodel==0.0.24",
  "asyncpg==0.30.0",
  "alembic==1.16.4",
  "redis==6.1.0",
  "whitenoise==6.9.0",
  "Pillow==11.1.0",
  "pydantic==2.11.7",
  "pydantic-extra-types==2.10.5",
  "pydantic-core==2.33.2",
  "pydantic-settings==2.10.1",
  "structlog==25.4.0",
  "minio==7.2.15",
  "ipython==9.2.0",
  "httpx==0.28.1",
]
[project.optional-dependencies]
dependencies = [
    "Werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "watchfiles==1.0.4",
    "mypy==1.17.1",
    "pytest==8.3.5",
    "pytest-sugar==1.0.0",
    "factory-boy==3.3.3",
    "coverage==7.6.12",
    "debugpy==1.8.13",
    "flake8==7.2.0",
    "flake8-isort==6.1.2",
    "black==25.1.0",
    "pre-commit==4.2.0",
    "ruff==0.12.4",
]

[project.urls]
Repository = "https://github.com/Metal-Bat/async-fast-api-base"

# ==== alembic ====
[tool.alembic]
script_location = "%(here)s/src/migrations"
prepend_sys_path = ["."]
timezone = "UTC"

[tool.alembic.loggers]
keys = "root,sqlalchemy,alembic"

[tool.alembic.handlers]
keys = "console"

[tool.alembic.formatters]
keys = "generic"

[tool.alembic.logger_root]
level = "WARN"
handlers = "console"

[tool.alembic.logger_sqlalchemy]
level = "WARN"
handlers = "console,generic"
qualname = "sqlalchemy.engine"

[tool.alembic.logger_alembic]
level = "INFO"
handlers = "console,generic"
qualname = "alembic"

[tool.alembic.handler_console]
class = "StreamHandler"
args = "(sys.stderr,)"
level = "NOTSET"
formatter = "generic"

[tool.alembic.formatter_generic]
format = "%(levelname)-5.5s [%(name)s] %(message)s"
datefmt = "%H:%M:%S"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["tests.py", "test_*.py"]
filterwarnings = []

# ==== black ====
[tool.black]
target-version = ['py313']

# ==== flake8 ====
[tool.flake8]
ignore = "B008,E501"

# ==== isort ====
[tool.isort]
profile = "black"
known_first_party = ["firebase", "config"]
skip = ["venv/"]

# ==== Coverage ====
[tool.coverage.run]
include = ["app/**"]
omit = ["*/tests/*"]

# ==== mypy ====
[tool.mypy]
python_version = "3.13"
show_traceback = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "*/tests/*"
ignore_errors = true

# ==== commitizen ====
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
